--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div style="margin-top: 80px">
+  <router-outlet></router-outlet>
+</div>
