--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
-<div>
-  <a routerLink="/">მთავარი გვერდი</a>
-</div>
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
+<button class="btn" routerLink="profile">
+  <i class="fa fa-bars"></i> Menu
+</button>
