--- a/src/app/profile-edit/profile-edit.component.html
+++ b/src/app/profile-edit/profile-edit.component.html
@@ -19,20 +19,20 @@
   <abbr title="პაროლი უნდა შეიცავდეს მინიმუმ 6 სიმბოლოს">🛈</abbr>
   <div class="field-name">სახელი</div>
   <input
-    [ngStyle]="getInputStyle('fname')"
-    [formControlName]="'fname'"
+    [ngStyle]="getInputStyle('fName')"
+    [formControlName]="'fName'"
     type="text"
-    name="fname"
-    id="fname"
+    name="fName"
+    id="fName"
     maxlength="50"
   />
   <div class="field-name">გვარი</div>
   <input
-    [ngStyle]="getInputStyle('lname')"
-    [formControlName]="'lname'"
+    [ngStyle]="getInputStyle('lName')"
+    [formControlName]="'lName'"
     type="text"
-    name="lname"
-    id="lname"
+    name="lName"
+    id="lName"
     maxlength="50"
   />
   <button type="submit" class="btn-login">შენახვა</button>
