--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,21 @@
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
-
-<button class="btn" routerLink="profile">
-  <i class="fa fa-bars"></i> Menu
-</button>
+<p-toolbar styleClass="mb-4 gap-2 h-full w-screen">
+  <ng-template pTemplate="left"> </ng-template>
+  <ng-template pTemplate="right">
+    <!-- <button
+      pButton
+      pRipple
+      type="button"
+      icon="pi pi-user"
+      class="p-button-rounded p-button-info p-button-lg h-3rem w-3rem mr-2"
+    ></button> -->
+    <button
+    *ngIf="userLoggedIn()"
+      (click)="logOut()"
+      pButton
+      pRipple
+      type="button"
+      icon="pi pi-sign-out"
+      class="p-button-rounded p-button-danger p-button-lg h-3rem w-3rem mr-2"
+    ></button>
+  </ng-template>
+</p-toolbar>
