minor bug fix v1.2.2

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -74,6 +74,7 @@
 
   <ng-template pTemplate="footer">
     <button
+      *ngIf="user!.id"
       pButton
       pRipple
       label="Delete Account"
